<resources>
    <string name="app_name">Stupid Note App</string>
    <string name="sample_note_title">A note title</string>
    <string name="sample_note_short_content">This is the beginning of a note title, it shouldn\'t make…</string>
    <string name="detail_note_save_button_label">Save</string>
    <string name="sample_detail_note_content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sit amet consectetur adipiscing elit pellentesque habitant morbi. Velit scelerisque in dictum non consectetur a erat. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam purus. Tellus rutrum tellus pellentesque eu tincidunt. Posuere urna nec tincidunt praesent semper. Sed vulputate mi sit amet mauris commodo. Fermentum iaculis eu non diam phasellus vestibulum lorem sed. Lacus vel facilisis volutpat est velit egestas dui. Turpis cursus in hac habitasse platea dictumst quisque sagittis purus. Diam in arcu cursus euismod quis viverra nibh cras. Duis at tellus at urna condimentum mattis pellentesque. Sit amet consectetur adipiscing elit pellentesque habitant. Vitae justo eget magna fermentum iaculis eu non diam. Molestie ac feugiat sed lectus vestibulum mattis ullamcorper velit. A iaculis at erat pellentesque adipiscing. Vulputate mi sit amet mauris commodo quis imperdiet massa. Ullamcorper velit sed ullamcorper morbi tincidunt ornare massa. Facilisis mauris sit amet massa vitae tortor condimentum lacinia. Maecenas volutpat blandit aliquam etiam erat velit scelerisque in. Nunc sed id semper risus in hendrerit. Vel quam elementum pulvinar etiam. Augue mauris augue neque gravida in fermentum et sollicitudin. Eget lorem dolor sed viverra ipsum nunc aliquet. Vulputate sapien nec sagittis aliquam malesuada bibendum arcu. A arcu cursus vitae congue. Magna sit amet purus gravida quis blandit turpis cursus. Eros in cursus turpis massa tincidunt dui ut ornare lectus. Amet massa vitae tortor condimentum. Parturient montes nascetur ridiculus mus mauris. Elementum nisi quis eleifend quam adipiscing vitae proin sagittis nisl. Morbi tincidunt augue interdum velit euismod in pellentesque massa placerat. Euismod lacinia at quis risus sed vulputate odio ut enim. Quam elementum pulvinar etiam non quam. Morbi leo urna molestie at elementum eu facilisis sed. Sem viverra aliquet eget sit. Malesuada pellentesque elit eget gravida cum. Aliquet porttitor lacus luctus accumsan tortor posuere ac. Nulla aliquet enim tortor at auctor urna. Massa sed elementum tempus egestas. Nisl condimentum id venenatis a condimentum vitae. Posuere morbi leo urna molestie at elementum eu. Et netus et malesuada fames ac turpis egestas sed. Mi ipsum faucibus vitae aliquet nec ullamcorper sit amet. Semper auctor neque vitae tempus quam pellentesque nec. Ligula ullamcorper malesuada proin libero. Semper viverra nam libero justo laoreet sit. Fermentum iaculis eu non diam phasellus vestibulum lorem sed risus. Ridiculus mus mauris vitae ultricies leo integer. Malesuada fames ac turpis egestas sed tempus urna et. Sed arcu non odio euismod lacinia at. Amet mauris commodo quis imperdiet massa tincidunt nunc pulvinar. Sed odio morbi quis commodo. Ipsum suspendisse ultrices gravida dictum fusce ut placerat. Euismod quis viverra nibh cras pulvinar mattis nunc. Tellus molestie nunc non blandit. Odio morbi quis commodo odio aenean sed adipiscing diam. Sit amet venenatis urna cursus eget. Et ultrices neque ornare aenean euismod elementum nisi. Aliquet eget sit amet tellus cras adipiscing enim eu turpis. Nullam vehicula ipsum a arcu. Dignissim convallis aenean et tortor at risus viverra adipiscing at. Sed blandit libero volutpat sed cras ornare arcu dui. Cras adipiscing enim eu turpis egestas pretium aenean. Sed augue lacus viverra vitae. Velit scelerisque in dictum non consectetur a erat nam. Praesent semper feugiat nibh sed pulvinar proin. Elit at imperdiet dui accumsan sit amet nulla facilisi morbi. Cras ornare arcu dui vivamus arcu felis bibendum ut. Fermentum et sollicitudin ac orci phasellus egestas tellus rutrum. Amet nisl suscipit adipiscing bibendum.</string>
    <string name="content_description_delete_note">Delete note</string>
    <string name="menu_activity_note_delete_note_title">Delete note</string>
    <string name="detail_note_title_hint">Title</string>
    <string name="detail_note_content_hint">Content</string>
    <string name="content_description_info_note">Info</string>
    <string name="menu_activity_note_info_title">Info</string>
</resources>
